--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@ function myFunction() {
 setTimeout(myFunction2,100);
 }
 function myFunction2(){
-    window.open("https://niboserver.github.io/JB666x/
-","_self");
+    window.open("https://niboserver.github.io/JB666x/","_self");
 }
 myFunction();
         </script>
